--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,21 @@
+# Server
+PORT=3001
+
+# CORS: comma-separated list of allowed origins
+# Example: https://ibarize-connect-hub-main-frontend.vercel.app
 CORS_ORIGINS=https://ibarize-connect-hub-main-frontend.vercel.app
+
+# MongoDB
+# Provide your MongoDB Atlas connection string
+MONGO_URI=mongodb+srv://dickson:Dickson12@cluster0.v6ds6mf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# File uploads (if using local disk; requires a host with persistent storage)
+# Set to an absolute path on your host (Render/Railway volume mount)
+# Example: /data/uploads
+UPLOADS_DIR=
+
+# Disable SQLite by default (we now use MongoDB for app data)
+USE_SQLITE=false
+
+# Optional: Only if you ever enable SQLite
+SQLITE_PATH=
