--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.18.0",
     "multer": "^1.4.5-lts.1",
+    "serverless-http": "^3.2.0",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.1"
   },
