--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ CORS_ORIGINS=https://ibarize-connect-hub-main-frontend.vercel.app
 
 # MongoDB
 # Provide your MongoDB Atlas connection string
-MONGO_URI=mongodb+srv://manzinshuti_db_user:<Manzi5002.>@cluster0.5m6p1y7.mongodb.net/ibarize-connect-hub
+MONGO_URI=mongodb+srv://manzinshuti_db_user:Manzi5002.@cluster0.5m6p1y7.mongodb.net/ibarize-connect-hub
 
 # File uploads (if using local disk; requires a host with persistent storage)
 # Set to an absolute path on your host (Render/Railway volume mount)
